--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -6,3 +6,10 @@
     color: #2c3e50;
     margin-top: 60px;
 }
+.jumbotron{
+  background-image: url('../main.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 80vh;
+
+  }
