--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,6 @@
+a:hover{
+  text-decoration: none;
+}
 ol,ul{
   list-style-type: none;
 }
@@ -14,7 +17,7 @@ ol,ul{
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
-    margin-top: 60px;
+    margin-top: 56px;
 }
 .jumbotron{
   background-image: url('../main.jpg');
@@ -32,6 +35,10 @@ ol,ul{
   }
   .after-post{
     text-align: center;
+    display: inline-flex;
+  }
+  .after-post > li{
+    padding: 1em;
   }
   .blog-post-title{
     text-transform: uppercase;
@@ -60,6 +67,7 @@ ol,ul{
   display: inline-block;
   padding: 10px;
   background-color: #fff;
+  text-transform: uppercase;
 }
 .line-across span:before {
   content: '';
@@ -73,3 +81,42 @@ ol,ul{
 }
 
 /* end line across text*/
+
+.posts-body{
+  display: grid;
+  grid-template-columns:repeat(2, 1fr);
+  grid-gap: 1em;
+  /* grid-auto-rows: minmax(100px , auto); */
+}
+.nested {
+  display: grid;
+  grid-template-columns:1fr 2fr;
+  grid-gap: 0.5em;
+  grid-auto-rows: minmax(100px , auto);
+}
+
+.nested > div{
+  text-align: left;
+  color: #000;
+}
+
+.nested > div > h5{
+  font-weight: bold;
+}
+.nested > div > p{
+  color: #ddd;
+}
+.popuplar-posts > a:nth-child(even){
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+}
+
+.newsletter{
+  margin: 0.8em 0.8em 2.8em 0.8em;
+  background: #ddd;
+  padding: 0.6em 0.6em 1.6em 0.6em;
+}
+
+.mastfoot{
+  margin: 1em;
+}
